[package]
name = "minesweeper_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core logic for Minesweeper game"
homepage = "https://github.com/etoledom/minesweeper_core"
documentation = "https://github.com/etoledom/minesweeper_core"
repository = "https://github.com/etoledom/minesweeper_core"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"
piston_window = "0.127.0"

[[bench]]
name = "selected"
harness = false
